--- a/frontend/index.css
+++ b/frontend/index.css
@@ -66,3 +66,10 @@ button:disabled {
     background: #f8d7da;
     border-color: #f5c6cb;
 }
+#job_desc {
+    padding-top: 0.8vh;
+    padding-bottom: 0.8vh;
+    padding-left: 0.2vb;
+    margin-left: 5px;
+    width: 100%;
+}
